# omnissa

./: README.md
selenium_crud_framework/: pre_cleanup.sh  pyproject.toml  pytest.ini
selenium_crud_framework/tests/: conftest.py  test_crud_operations.py
