[tool.poetry]
name = "selenium-crud-framework"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
selenium = "^4.25.0"
requests = "^2.32.3"
pytest = "^8.3.3"
webdriver-manager = "^4.0.2"
pytest-html = "^4.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
